# flask-blog-generator

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  generator.py  routes.py
app/templates/: about.html  admin_list.html  base.html  base_public.html  index.html  post.html  post_editor.html
app/utils/: posts_utils.py
content/: building-my-own-flask-powered-static-blog-generator.md  index.json  python-dependency-management-history-and-evolution.md  try-this-md.md
docs/: about.html  index.html
docs/generated_posts/: building-my-own-flask-powered-static-blog-generator.html  python-dependency-management-history-and-evolution.html
public/: about.html
public/generated_posts/: try-this-md.html
